--- a/blue-team.html
+++ b/blue-team.html
@@ -30,7 +30,11 @@
             margin: 0;
             padding: 0;
         }
-        
+        html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
         h1 {
             margin: 40px 0 20px;
             color: var(--header-color);
