--- a/red-team.html
+++ b/red-team.html
@@ -17,7 +17,10 @@
             --second-place-color: #C0C0C0;
             --third-place-color: #CD7F32;
         }
-        
+         html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
         body {
             background-image: url('NewBackgroundRedCYS.jpg');
             background-size: cover;
