--- a/blue-team.html
+++ b/blue-team.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@200;300;400;500&family=Press+Start+2P&display=swap" rel="stylesheet">
     <style>
          :root {
-            --text-color: #ad7c09;
+            --text-color: #000000;
             --header-color: #1c2bb3;
             --accent-color: #00d8ec;
             --font-stack: 'Orbitron', serif;
